# sharplines

./: .env.example  CONTRIBUTING.md  README.md  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 001_users.sql  002_refresh_tokens.sql  003_password_resets.sql
backend/src/: config.rs  db.rs  errors.rs  main.rs
backend/src/auth/: jwt.rs  lichess.rs  middleware.rs  mod.rs  password.rs
backend/src/email/: resend.rs
backend/src/handlers/: auth.rs
backend/src/models/: user.rs
frontend/: .gitignore  README.md  package.json  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/api/: client.test.ts  client.ts
frontend/src/lib/components/: ProtectedRoute.svelte  ProtectedRoute.test.ts
frontend/src/lib/stores/: auth.svelte.ts  auth.test.ts
frontend/src/routes/: +layout.svelte  layout.test.ts  page.test.ts
frontend/src/routes/forgot-password/: +page.svelte  page.test.ts
frontend/src/routes/login/: +page.svelte  page.test.ts
frontend/src/routes/register/: +page.svelte  page.test.ts
frontend/src/routes/reset-password/: +page.svelte  page.test.ts
frontend/src/routes/verify-email/: +page.svelte  page.test.ts
landing/: index.html  wrangler.toml
landing/.wrangler/cache/: pages.json
landing/functions/api/: waitlist.js
